[gd_scene load_steps=2 format=2]

[ext_resource path="res://screens/gui/GUI.gd" type="Script" id=1]

[node name="GUI" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="SuperContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="SuperContainer"]
margin_right = 1580.0
margin_bottom = 880.0
color = Color( 0.0509804, 0.0509804, 0.0509804, 0.270588 )

[node name="MarginContainer" type="MarginContainer" parent="SuperContainer"]
margin_right = 1580.0
margin_bottom = 880.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="SuperContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1570.0
margin_bottom = 870.0
custom_constants/separation = 10

[node name="LeftContainer" type="VBoxContainer" parent="SuperContainer/MarginContainer/HBoxContainer"]
margin_right = 516.0
margin_bottom = 860.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 10

[node name="PlayerInfoContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer"]
margin_right = 516.0
margin_bottom = 425.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer"]
margin_right = 516.0
margin_bottom = 425.0
color = Color( 0.0859375, 0.0859375, 0.0859375, 0.270588 )

[node name="MarginContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer"]
margin_right = 516.0
margin_bottom = 425.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 506.0
margin_bottom = 415.0
custom_constants/separation = 10

[node name="NameContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer"]
margin_right = 496.0
margin_bottom = 34.0

[node name="ColorRect" type="ColorRect" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/NameContainer"]
margin_right = 496.0
margin_bottom = 34.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/NameContainer"]
margin_right = 496.0
margin_bottom = 34.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/NameContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 486.0
margin_bottom = 24.0

[node name="NameLabel" type="Label" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/NameContainer/MarginContainer/HBoxContainer"]
margin_right = 236.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Name"

[node name="NameField" type="Label" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/NameContainer/MarginContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 278.0
margin_bottom = 14.0
size_flags_horizontal = 2
text = "Name"

[node name="TrinketContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 496.0
margin_bottom = 78.0

[node name="ColorRect" type="ColorRect" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/TrinketContainer"]
margin_right = 496.0
margin_bottom = 34.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/TrinketContainer"]
margin_right = 496.0
margin_bottom = 34.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/TrinketContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 486.0
margin_bottom = 24.0

[node name="TrinketLabel" type="Label" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/TrinketContainer/MarginContainer/HBoxContainer"]
margin_right = 236.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Trinket"

[node name="TrinketField" type="Label" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/TrinketContainer/MarginContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 476.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "TrinketName"

[node name="MoodContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 496.0
margin_bottom = 122.0

[node name="ColorRect" type="ColorRect" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/MoodContainer"]
margin_right = 496.0
margin_bottom = 34.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/MoodContainer"]
margin_right = 496.0
margin_bottom = 34.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/MoodContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 486.0
margin_bottom = 24.0

[node name="MoodLabel" type="Label" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/MoodContainer/MarginContainer/HBoxContainer"]
margin_right = 236.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Mood"

[node name="MoodField" type="Label" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/PlayerInfoContainer/MarginContainer/VBoxContainer/MoodContainer/MarginContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 476.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "MoodName"

[node name="OptionsContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer"]
margin_top = 435.0
margin_right = 516.0
margin_bottom = 860.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer"]
margin_right = 516.0
margin_bottom = 425.0
color = Color( 0.0859375, 0.0859375, 0.0859375, 0.270588 )

[node name="MarginContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer"]
margin_right = 516.0
margin_bottom = 425.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 506.0
margin_bottom = 415.0
custom_constants/separation = 10

[node name="SaveContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer"]
margin_right = 496.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer/SaveContainer"]
margin_right = 496.0
margin_bottom = 40.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer/SaveContainer"]
margin_right = 496.0
margin_bottom = 40.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="SaveButton" type="Button" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer/SaveContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 486.0
margin_bottom = 30.0
focus_mode = 0
text = "Save"

[node name="LoadContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 496.0
margin_bottom = 90.0

[node name="ColorRect" type="ColorRect" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer/LoadContainer"]
margin_right = 496.0
margin_bottom = 40.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer/LoadContainer"]
margin_right = 496.0
margin_bottom = 40.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="LoadButton" type="Button" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer/LoadContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 486.0
margin_bottom = 30.0
focus_mode = 0
text = "Load"

[node name="MainMenuButton" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 496.0
margin_bottom = 140.0

[node name="ColorRect" type="ColorRect" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer/MainMenuButton"]
margin_right = 496.0
margin_bottom = 40.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer/MainMenuButton"]
margin_right = 496.0
margin_bottom = 40.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="MainMenuButton" type="Button" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer/MainMenuButton/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 486.0
margin_bottom = 30.0
focus_mode = 0
text = "Main Menu"

[node name="ExitGameContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 496.0
margin_bottom = 190.0

[node name="ColorRect" type="ColorRect" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer/ExitGameContainer"]
margin_right = 496.0
margin_bottom = 40.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer/ExitGameContainer"]
margin_right = 496.0
margin_bottom = 40.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ExitGameButton" type="Button" parent="SuperContainer/MarginContainer/HBoxContainer/LeftContainer/OptionsContainer/MarginContainer/VBoxContainer/ExitGameContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 486.0
margin_bottom = 30.0
focus_mode = 0
text = "Exit Game"

[node name="RightContainer" type="VBoxContainer" parent="SuperContainer/MarginContainer/HBoxContainer"]
margin_left = 526.0
margin_right = 1560.0
margin_bottom = 860.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/RightContainer"]
margin_right = 1034.0
margin_bottom = 629.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="SuperContainer/MarginContainer/HBoxContainer/RightContainer/MarginContainer"]
margin_right = 1034.0
margin_bottom = 629.0
color = Color( 0.0859375, 0.0859375, 0.0859375, 0.270588 )

[node name="MarginContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/RightContainer/MarginContainer"]
margin_right = 1034.0
margin_bottom = 629.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="InventoryScroll" type="ScrollContainer" parent="SuperContainer/MarginContainer/HBoxContainer/RightContainer/MarginContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1024.0
margin_bottom = 619.0
size_flags_vertical = 3

[node name="Inventory" type="VBoxContainer" parent="SuperContainer/MarginContainer/HBoxContainer/RightContainer/MarginContainer/MarginContainer/InventoryScroll"]
margin_right = 1014.0
margin_bottom = 609.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/RightContainer"]
margin_top = 639.0
margin_right = 1034.0
margin_bottom = 860.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="ColorRect" type="ColorRect" parent="SuperContainer/MarginContainer/HBoxContainer/RightContainer/MarginContainer2"]
margin_right = 1034.0
margin_bottom = 221.0
color = Color( 0.0859375, 0.0859375, 0.0859375, 0.270588 )

[node name="MarginContainer" type="MarginContainer" parent="SuperContainer/MarginContainer/HBoxContainer/RightContainer/MarginContainer2"]
margin_right = 1034.0
margin_bottom = 221.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="SuperContainer/MarginContainer/HBoxContainer/RightContainer/MarginContainer2/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1024.0
margin_bottom = 211.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="VBoxContainer" type="VBoxContainer" parent="SuperContainer/MarginContainer/HBoxContainer/RightContainer/MarginContainer2/MarginContainer/ScrollContainer"]
margin_right = 1014.0
margin_bottom = 201.0
size_flags_horizontal = 3
size_flags_vertical = 3
